--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@types/highcharts": "^5.0.11",
+    "angular2-fullcalendar": "^1.0.19",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
+    "fullcalendar": "^3.7.0",
     "highcharts": "^6.0.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
