--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "core-js": "^2.4.1",
         "fullcalendar": "^3.7.0",
         "highcharts": "^6.0.3",
+        "moment": "^2.19.2",
+        "moment-timezone": "0.5.13",
         "ngx-bootstrap": "^1.8.1",
         "rxjs": "^5.0.1",
         "ts-helpers": "^1.1.1",
@@ -37,6 +39,8 @@
         "@angular/compiler-cli": "^2.3.1",
         "@types/jasmine": "2.5.38",
         "@types/node": "^6.0.42",
+        "@types/moment": "2.13.0",
+        "@types/moment-timezone": "0.2.34",
         "codelyzer": "~2.0.0-beta.1",
         "jasmine-core": "2.5.2",
         "jasmine-spec-reporter": "2.5.0",
