--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
         "@types/highcharts": "^5.0.11",
         "angular2-fullcalendar": "^1.0.19",
         "angular2-highcharts": "^0.5.5",
+        "bootstrap": "^4.0.0-beta.2",
         "core-js": "^2.4.1",
         "fullcalendar": "^3.7.0",
         "highcharts": "^6.0.3",
         "moment": "^2.19.2",
         "moment-timezone": "0.5.13",
-        "ngx-bootstrap": "^1.8.1",
+        "ngx-bootstrap": "^1.9.3",
         "rxjs": "^5.0.1",
         "ts-helpers": "^1.1.1",
         "zone.js": "^0.7.2"
