--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "^2.3.1",
         "@angular/router": "^3.3.1",
         "@types/highcharts": "^5.0.11",
+        "angular2-csv": "^0.2.5",
         "angular2-fullcalendar": "^1.0.19",
         "angular2-highcharts": "^0.5.5",
         "bootstrap": "^4.0.0-beta.2",
