--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "highcharts": "^6.0.3",
         "moment": "^2.19.2",
         "moment-timezone": "0.5.13",
+        "ng2-select": "^2.0.0",
         "ngx-bootstrap": "^1.9.3",
         "rxjs": "^5.0.1",
         "ts-helpers": "^1.1.1",
