--- a/package.json
+++ b/package.json
@@ -1,60 +1,87 @@
 {
-    "name": "project-sos3",
-    "version": "0.0.0",
-    "license": "MIT",
-    "angular-cli": {},
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "pree2e": "webdriver-manager update --standalone false --gecko false",
-        "e2e": "protractor"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/common": "^2.3.1",
-        "@angular/compiler": "^2.3.1",
-        "@angular/core": "^2.3.1",
-        "@angular/forms": "^2.3.1",
-        "@angular/http": "^2.3.1",
-        "@angular/platform-browser": "^2.3.1",
-        "@angular/platform-browser-dynamic": "^2.3.1",
-        "@angular/router": "^3.3.1",
-        "@types/highcharts": "^5.0.11",
-        "angular2-csv": "^0.2.5",
-        "angular2-fullcalendar": "^1.0.19",
-        "angular2-highcharts": "^0.5.5",
-        "bootstrap": "^4.0.0-beta.2",
-        "core-js": "^2.4.1",
-        "fullcalendar": "^3.7.0",
-        "highcharts": "^6.0.3",
-        "moment": "^2.19.2",
-        "moment-timezone": "0.5.13",
-        "ng2-select": "^2.0.0",
-        "ngx-bootstrap": "^1.9.3",
-        "rxjs": "^5.0.1",
-        "ts-helpers": "^1.1.1",
-        "zone.js": "^0.7.2"
-    },
-    "devDependencies": {
-        "@angular/cli": "^1.5.0",
-        "@angular/compiler-cli": "^2.3.1",
-        "@types/jasmine": "2.5.38",
-        "@types/node": "^6.0.42",
-        "@types/moment": "2.13.0",
-        "@types/moment-timezone": "0.2.34",
-        "codelyzer": "~2.0.0-beta.1",
-        "jasmine-core": "2.5.2",
-        "jasmine-spec-reporter": "2.5.0",
-        "karma": "1.2.0",
-        "karma-chrome-launcher": "^2.0.0",
-        "karma-cli": "^1.0.1",
-        "karma-jasmine": "^1.0.2",
-        "karma-remap-istanbul": "^0.2.1",
-        "protractor": "~4.0.13",
-        "ts-node": "1.2.1",
-        "tslint": "^4.3.0",
-        "typescript": "2.4.0"
-    }
+  "compilerOptions": {
+    "lib": [
+      "es5",
+      "dom",
+      "es6",
+      "dom.iterable",
+      "scripthost"
+    ],
+    "noLib": false,
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": true,
+    "types": [
+      "node"
+    ]
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "name": "project-sos3",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
+  "scripts": {
+    "ng": "ng",
+    "s": "http-server",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "@types/highcharts": "^5.0.11",
+    "angular2-csv": "^0.2.5",
+    "angular2-fullcalendar": "^1.0.19",
+    "angular2-highcharts": "^0.5.5",
+    "bootstrap": "^4.0.0-beta.2",
+    "core-js": "^2.4.1",
+    "fullcalendar": "^3.7.0",
+    "highcharts": "^6.0.3",
+    "moment": "^2.19.2",
+    "moment-timezone": "0.5.13",
+    "ng2-select": "^2.0.0",
+    "ngx-bootstrap": "^1.9.3",
+    "rxjs": "^5.0.1",
+    "scroll-to-element": "^2.0.0",
+    "sweetalert": "^2.1.0",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.2"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "@types/moment": "2.13.0",
+    "@types/moment-timezone": "0.2.34",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "2.4.0"
+  }
 }
